			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05j: *********************************

IMP: (3/16/07, DN) Actual changing of project settings is performed in Change Jobs.
    Project setting dialog submit jobs to change project settings.

BUG: (3/16/07, DN) Database JUnit regressions loads AWT classes.
FIX: Move ImageIcon stuff from EGraphics.Outline to ColorPatternPanel.

BUG: (3/16/07, DN) Database JUnit regressions crash in Setting initialization.
FIX: Add "EDatabase.theDatabase.lowLevelBeginChanging(null);" to JUnit "setUp()" methods.

IMP: (3/15/07, DN) Technology.getTSMC180Technology() and TechType.TSMC180 link to
     TSMC180 technology instead of TSMC foundry of MOCMOS technology.

BUG: (3/15/07, DN) Setting don't change when new value is factory value.
FIX: In Setting.set compare new value with getValue() instead of factoryObj.

BUG: (3/15/07, DN) Sturtup fails in MDI mode.
FIX: In TopLevel move MDI initialization from OSInitialize to InitializeWindows,
     so that it is executed after technology initialization.

BUG: (3/15/07, DN) ClassCastException in OptionReconcile
FIX: Consider both Boolean and Integer objects in OptionReconcile constructor.

BUG: (3/15/07, DN) Broken numberofmetals setting in MoCMOS technology.
FIX: In TSMC180.getNumMetal distinguish what technology isthis.

IMP: (3/15/07, DN) Added project setting "tsmc180.NumMetalLayers".

BUG: (3/15/07, DN) Factory values of Technology.Foundry setting should be one of supported foundries.
FIX: In BiCMOS, Bipolar, MoCMOSOld, MoCMOSSub define factory value of Foundry as MOSIS.

BUG: (3/15/07, DN) Crash entering GDS tab in project settings dialog.
FIX: In Foundry.finish use "gdsLayerSettings[layerIndex] != null" instead of "gdsLayerSettings != null".

IMP: (3/14/07, DN) Reader of "projsettings.xml" resets project Settings value to factory default,